# NMIFD

./: CMakeLists.txt  MeshClass.cpp  MeshClass.h  linAlg.cpp  linAlg.h  main  main.cpp
VerificationCode/: Meshing.py
inputFiles/: boundary.txt  cells.txt  faces.txt  points.txt
